--- a/style.css
+++ b/style.css
@@ -325,15 +325,28 @@ section h2 {
 #kontakt address {
   font-style: normal;
   line-height: 1.6;
+  flex: 1 1 300px;
+}
+#kontakt .contact-layout {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  align-items: flex-start;
 }
 #kontakt .map-container {
   margin-top: 1rem;
   border: 1px solid var(--lightgrey);
+  flex: 1 1 300px;
 }
 #kontakt iframe {
   width: 100%;
   height: 300px;
   border: 0;
+}
+@media (min-width: 700px) {
+  #kontakt .map-container {
+    margin-top: 0;
+  }
 }
 footer {
   background: var(--darkgrey);
