--- a/style.css
+++ b/style.css
@@ -309,7 +309,7 @@ section h2 {
 /* 7. Über uns */
 #ueber-uns {
   max-width: 800px;
-  margin: auto 0 4rem;
+  margin: 0 auto 4rem;
   text-align: center;
 }
 
