--- a/style.css
+++ b/style.css
@@ -336,7 +336,8 @@ section h2 {
 #kontakt .map-container {
   margin-top: 1rem;
   border: 1px solid var(--lightgrey);
-  flex: 1 1 300px;
+  flex: 0 0 250px;
+  margin-left: auto;
 }
 #kontakt iframe {
   width: 100%;
