--- a/style.css
+++ b/style.css
@@ -70,6 +70,11 @@ body {
   line-height: 1.6;
 }
 
+/* Blocksatz für Fließtext */
+p {
+  text-align: justify;
+}
+
 /* 4. Header */
 header {
   background: var(--white);
